# python_shot

./: CMakeLists.txt  README.md  SHOT.cpp  SI.cpp  setup.py
include/: core.h
src/: binding.cpp  core.cpp
test/: test_descriptor.py
